Direct database version of osm2pgsql

--- a/experimental/Makefile
+++ b/experimental/Makefile
@@ -1,10 +1,12 @@
-CFLAGS += -g 
-CFLAGS += -O2 -Wall
+CFLAGS += -g -O2 -Wall
 CFLAGS += $(shell xml2-config --cflags)
 CFLAGS += $(shell geos-config --cflags)
+
 CXXFLAGS += -g -O2 -Wall -DGEOS_INLINE 
+
 LDFLAGS += $(shell xml2-config --libs) 
 LDFLAGS += $(shell geos-config --libs) 
+LDFLAGS += -lpq
 
 APPS:=osm2pgsql
 
@@ -16,3 +18,4 @@ clean:
 	rm -f  $(APPS) osm2pgsql.o build_geometry.o
 
 osm2pgsql: osm2pgsql.o build_geometry.o
+
