Split implementation into middle and output layers. Choice of RAM or PGSQL middle layers offers speed vs memory tradeoff. Implements new point/line/poly tables with z_order for latest osm.xml

--- a/experimental/Makefile
+++ b/experimental/Makefile
@@ -1,4 +1,4 @@
-CFLAGS += -g -O2 -Wall
+CFLAGS += -g -O2 -Wall -Wextra -Wsign-compare -Wpointer-sign 
 CFLAGS += $(shell xml2-config --cflags)
 CFLAGS += $(shell geos-config --cflags)
 
@@ -6,8 +6,13 @@ CXXFLAGS += -g -O2 -Wall -DGEOS_INLINE
 
 LDFLAGS += $(shell xml2-config --libs) 
 LDFLAGS += $(shell geos-config --libs) 
-LDFLAGS += -lpq
+LDFLAGS += -lpq -g
 
+SRCS:=$(wildcard *.c) $(wildcard *.cpp)
+OBJS:=$(SRCS:.c=.o)
+OBJS:=$(OBJS:.cpp=.o)
+DEPS:=$(SRCS:.c=.d)
+DEPS:=$(DEPS:.cpp=.d)
 APPS:=osm2pgsql
 
 .PHONY: all clean
@@ -15,7 +20,15 @@ APPS:=osm2pgsql
 all: $(APPS)
 
 clean: 
-	rm -f  $(APPS) osm2pgsql.o build_geometry.o
+	rm -f  $(APPS) $(OBJS) $(DEPS)
 
-osm2pgsql: osm2pgsql.o build_geometry.o
+%.d: %.c
+	@set -e; rm -f $@; \
+	$(CC) -MM $(CPPFLAGS) $< > $@.$$$$; \
+	sed 's,\($*\)\.o[ :]*,\1.o $@ : ,g' < $@.$$$$ > $@; \
+	rm -f $@.$$$$
+
+-include $(DEPS)
+
+osm2pgsql: osm2pgsql.o build_geometry.o middle-pgsql.o keyvals.o output-pgsql.o middle-ram.o
 
