osm2pgsql/mapnik database changed to store data in mercator. Saving reprojection during rendering
git-svn-id: http://svn.openstreetmap.org/applications/utils/export/osm2pgsql@2813 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/experimental/Makefile
+++ b/experimental/Makefile
@@ -2,18 +2,20 @@ CFLAGS += -g -O2 -Wall -Wextra -Wsign-compare -Wpointer-sign
 CFLAGS += $(shell xml2-config --cflags)
 CFLAGS += $(shell geos-config --cflags)
 
-CXXFLAGS += -g -O2 -Wall -DGEOS_INLINE 
+CXXFLAGS += -g -O2 -Wall -DGEOS_INLINE
 
 LDFLAGS += $(shell xml2-config --libs) 
 LDFLAGS += $(shell geos-config --libs) 
 LDFLAGS += -lpq -g
 LDFLAGS += -lbz2
+LDFLAGS += -lproj
 
 SRCS:=$(wildcard *.c) $(wildcard *.cpp)
 OBJS:=$(SRCS:.c=.o)
 OBJS:=$(OBJS:.cpp=.o)
 DEPS:=$(SRCS:.c=.d)
 DEPS:=$(DEPS:.cpp=.d)
+
 APPS:=osm2pgsql
 
 .PHONY: all clean
@@ -30,6 +32,6 @@ clean:
 	rm -f $@.$$$$
 
 -include $(DEPS)
-
-osm2pgsql: osm2pgsql.o build_geometry.o middle-pgsql.o keyvals.o output-pgsql.o middle-ram.o input.o UTF8sanitizer.o
+	
+osm2pgsql: osm2pgsql.o build_geometry.o middle-pgsql.o keyvals.o output-pgsql.o middle-ram.o input.o UTF8sanitizer.o reprojection.o
 
