osm2pgsql: Mac OS-X and GEOS-3 compatability tweaks
git-svn-id: http://svn.openstreetmap.org/applications/utils/export/osm2pgsql@2826 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/experimental/Makefile
+++ b/experimental/Makefile
@@ -1,12 +1,13 @@
-CFLAGS += -g -O2 -Wall -Wextra -Wsign-compare -Wpointer-sign 
+CFLAGS += -O2 -Wall -Wextra -Wsign-compare -Wpointer-sign
 CFLAGS += $(shell xml2-config --cflags)
 CFLAGS += $(shell geos-config --cflags)
+CFLAGS += -I$(shell pg_config --includedir)
 
-CXXFLAGS += -g -O2 -Wall -DGEOS_INLINE
+CXXFLAGS += -O2 -Wall -DGEOS_INLINE
 
 LDFLAGS += $(shell xml2-config --libs) 
-LDFLAGS += $(shell geos-config --libs) 
-LDFLAGS += -lpq -g
+LDFLAGS += $(shell geos-config --libs)
+LDFLAGS += -L$(shell pg_config --libdir) -lpq
 LDFLAGS += -lbz2
 LDFLAGS += -lproj
 
