--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,9 @@ AC_CONFIG_HEADER(config.h)
 dnl Find C compiler
 AC_PROG_CC
 
+dnl Find C++ compiler
+AC_PROG_CXX
+
 dnl Generate Makefile
 AC_OUTPUT(Makefile)
 
