let configure store currently used options and build specific environment variables in a convenience script called "config.nice" that can be used to easily add further options later ...
git-svn-id: http://svn.openstreetmap.org/applications/utils/export/osm2pgsql@24281 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/configure.ac
+++ b/configure.ac
@@ -4,6 +4,8 @@ AC_INIT(osm2pgsql, 0.70.5)
 dnl Required autoconf version
 AC_PREREQ(2.63)
 
+AX_CONFIG_NICE
+
 dnl use automake to generate standard Makefiles
 AM_INIT_AUTOMAKE([1.10 dist-bzip2 std-options check-news])
 
