Add a few header files for people compiling under Ubuntu. geos-dev packages under Ubuntu seem to lack these, leading to compiler errors. Adding them in like this is not elegant but solves the problem...
git-svn-id: http://svn.openstreetmap.org/applications/utils/export/osm2pgsql@25196 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,7 +36,7 @@ BUILT_SOURCES = \
 endif
 
 AM_CFLAGS = @PTHREAD_CFLAGS@ @POSTGRESQL_CFLAGS@ @XML2_CFLAGS@ @BZIP2_CFLAGS@  @GEOS_CFLAGS@ @PROJ_CFLAGS@  @PROTOBUF_C_CFLAGS@ -DOSM2PGSQL_DATADIR='"$(datadir)"' -DVERSION='"@PACKAGE_VERSION@"'
-AM_CPPFLAGS = @PTHREAD_CFLAGS@ @POSTGRESQL_CFLAGS@ @XML2_CFLAGS@ @BZIP2_CFLAGS@  @GEOS_CFLAGS@ @PROJ_CFLAGS@ -DOSM2PGSQL_DATADIR='"$(datadir)"'
+AM_CPPFLAGS = @PTHREAD_CFLAGS@ @POSTGRESQL_CFLAGS@ @XML2_CFLAGS@ @BZIP2_CFLAGS@  @GEOS_CFLAGS@ @PROJ_CFLAGS@ -DOSM2PGSQL_DATADIR='"$(datadir)"' -Igeos-fallback
 
 AM_LDFLAGS = @PTHREAD_CFLAGS@ @POSTGRESQL_LDFLAGS@ @XML2_LDFLAGS@ @BZIP2_LDFLAGS@ @GEOS_LDFLAGS@ @GEOS_LIBS@ @PROJ_LDFLAGS@ @PROTOBUF_C_LDFLAGS@
 
