--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,13 @@ Source: osm2pgsql
 Section: utils
 Priority: optional
 Maintainer: Frederik Ramm <frederik@remote.org>
-Build-Depends: debhelper (>= 7), libgeos-dev, libxml2-dev, libpq-dev, dpatch, proj | libproj0, libbz2-dev, automake, autoconf
-Standards-Version: 3.8.0
+Build-Depends: debhelper (>= 7), libgeos-dev, libxml2-dev, libpq-dev, dpatch, proj | libproj0, libbz2-dev, automake, autoconf, libtool, protobuf-c-compiler, libprotobuf-c0-dev
+Standards-Version: 3.9.2
 
 Package: osm2pgsql
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libgeos-3.0.0 | libgeos-3.1.0, libxml2, libpq5
+Depends: ${shlibs:Depends}, ${misc:Depends}, libgeos-3.2.0 | libgeos-3.2.2, libxml2, libpq5, libprotobuf-c0
+Recommends: postgresql, postgresql-8.4-postgis
 Conflicts:  openstreetmap-utils
 Description: Openstreetmap data to PostgreSQL converter
  osm2pgsql imports OpenStreetMap data into a PostGIS database.
