--- a/debian/rules
+++ b/debian/rules
@@ -12,17 +12,19 @@
 configure: configure-stamp
 configure-stamp: patch
 	dh_testdir
-	
+
 	# Add here commands to configure the package.
 
 	touch configure-stamp
 
-build: build-stamp
-
+build: build-arch build-indep
+build-arch: build-stamp
+build-indep: build-stamp
 build-stamp: configure-stamp  
 	dh_testdir
 
 	# Add here commands to compile the package.
+	./autogen.sh
 	automake --add-missing
 	aclocal
 	autoreconf -f
@@ -54,7 +56,7 @@ unpatch:
 install: build
 	dh_testdir
 	dh_testroot
-	dh_clean -k 
+	dh_prep 
 	dh_installdirs
 
 	# Add here commands to install the package into debian/osm2pgsql.
