--- a/debian/rules
+++ b/debian/rules
@@ -76,7 +76,7 @@ binary-arch: build install
 	dh_installexamples
 	dh_install
 #	dh_installmenu
-#	dh_installdebconf	
+	dh_installdebconf	
 #	dh_installlogrotate
 #	dh_installemacsen
 #	dh_installpam
