do not require dpatch; change help text
git-svn-id: http://svn.openstreetmap.org/applications/utils/export/osm2pgsql@27036 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: osm2pgsql
 Section: utils
 Priority: optional
 Maintainer: Frederik Ramm <frederik@remote.org>
-Build-Depends: debhelper (>= 7), libgeos-dev, libxml2-dev, libpq-dev, dpatch, proj | libproj0, libbz2-dev, automake, autoconf, libtool, protobuf-c-compiler, libprotobuf-c0-dev
+Build-Depends: debhelper (>= 7), libgeos-dev, libxml2-dev, libpq-dev, proj | libproj0, libbz2-dev, automake, autoconf, libtool, protobuf-c-compiler, libprotobuf-c0-dev
 Standards-Version: 3.9.2
 
 Package: osm2pgsql
