[osm2pgsql] Configure check for fork and only provice --number-processes if available
Windows doesn't have fork, so when compiling with MinGW ifdef those sections



git-svn-id: http://svn.openstreetmap.org/applications/utils/export/osm2pgsql@29052 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/configure.ac
+++ b/configure.ac
@@ -44,7 +44,7 @@ LFS_CFLAGS=`getconf LFS_CFLAGS`
 AC_SUBST(LFS_CFLAGS)
 
 AC_CHECK_FUNC(lseek64,[AC_DEFINE(HAVE_LSEEK64, [1], [lseek64 is present])],[AX_COMPILE_CHECK_SIZEOF(off_t)])
-AC_CHECK_FUNCS([posix_fallocate posix_fadvise sync_file_range])
+AC_CHECK_FUNCS([posix_fallocate posix_fadvise sync_file_range fork])
 
 
 dnl legacy 32bit ID mode
