Add the ability to perform tag tansform with a lua script
This allows to filter and transform tags for nodes, ways and relations
with a lua script.

This still supports the old c based tag processing as a fallback

--- a/configure.ac
+++ b/configure.ac
@@ -118,6 +118,9 @@ fi
 dnl Check for pthread library
 AX_PTHREAD(,[AC_MSG_ERROR([no])])
 
+AX_PROG_LUA
+AX_LUA_HEADERS
+AX_LUA_LIBS
 
 dnl Generate Makefile
 AC_OUTPUT(Makefile legacy/Makefile)
