also need interpreter for lua

--- a/configure.ac
+++ b/configure.ac
@@ -145,7 +145,7 @@ then
 lua libraries not found. You will NOT be able to use lua scripts for tag transform.
 
 To enable lua support, the lua interpreter and libraries are required. 
-Look for packages named: liblua5.2-dev
+Look for packages named: lua5.2 liblua5.2-dev
 ])
 fi
 
