--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ config.guess
 config.h.in
 config.sub
 configure
+compile
 depcomp
 fileformat.pb-c.c
 fileformat.pb-c.h
@@ -18,6 +19,7 @@ m4/ltsugar.m4
 m4/ltversion.m4
 m4/lt~obsolete.m4
 missing
+nodecachefilereader
 osmformat.pb-c.c
 osmformat.pb-c.h
 osm2pgsql
