Started adding unit tests.
Added a very basic XML parsing unit test, which is run in the
standard autoconf manner. Also ported the existing regression
tests to be run from the autoconf test harness as well.

Part of this meant pulling most of the code into a temporary
library so that it can be re-used by all the binaries, including
the unit tests. Hopefully this won't cause any major issues - it's
all libtool-based, so should be portable, and is statically linked
to the resulting binary so needs no installation.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,14 +1,77 @@
 ACLOCAL_AMFLAGS = -I m4
 
 bin_PROGRAMS = osm2pgsql nodecachefilereader
+noinst_LTLIBRARIES = libosm2pgsql.la
 
-osm2pgsql_SOURCES = build_geometry.cpp input.c middle.h middle-ram.h output-gazetteer.h output-pgsql.c rb.c sanitizer.h text-tree.h build_geometry.h input.h middle-pgsql.c osm2pgsql.c output.h output-pgsql.h rb.h sprompt.c UTF8sanitizer.c expire-tiles.c keyvals.c middle-pgsql.h osmtypes.h output-null.c parse-o5m.c parse-o5m.h parse-primitive.c parse-primitive.h parse-xml2.c parse-xml2.h pgsql.c reprojection.c sprompt.h expire-tiles.h keyvals.h middle-ram.c output-gazetteer.c output-null.h pgsql.h reprojection.h text-tree.c node-ram-cache.c wildcmp.c node-ram-cache.h node-persistent-cache.c node-persistent-cache.h binarysearcharray.c binarysearcharray.h tagtransform.c 
+osm2pgsql_SOURCES = osm2pgsql.c \
+	binarysearcharray.h \
+	build_geometry.h \
+	expire-tiles.h \
+	input.h \
+	keyvals.h \
+	middle-pgsql.h \
+	middle-ram.h \
+	middle.h \
+	node-persistent-cache.h \
+	node-ram-cache.h \
+	osmtypes.h \
+	output-gazetteer.h \
+	output-null.h \
+	output-pgsql.h \
+	output.h \
+	parse-o5m.h \
+	parse-primitive.h \
+	parse-xml2.h \
+	pgsql.h \
+	rb.h \
+	reprojection.h \
+	sanitizer.h \
+	sprompt.h \
+	text-tree.h
 
-nodecachefilereader_SOURCES = node-persistent-cache-reader.c node-persistent-cache.c node-ram-cache.c binarysearcharray.c
+osm2pgsql_LDADD = libosm2pgsql.la
 
+libosm2pgsql_la_SOURCES = \
+	UTF8sanitizer.c \
+	binarysearcharray.c \
+	build_geometry.cpp \
+	expire-tiles.c \
+	input.c \
+	keyvals.c \
+	middle-pgsql.c \
+	middle-ram.c \
+	node-persistent-cache.c \
+	node-ram-cache.c \
+	osmtypes.c \
+	output-gazetteer.c \
+	output-null.c \
+	output-pgsql.c \
+	parse-o5m.c \
+	parse-primitive.c \
+	parse-xml2.c \
+	pgsql.c \
+	rb.c \
+	reprojection.c \
+	sprompt.c \
+	tagtransform.c \
+	text-tree.c \
+	wildcmp.c
+
+nodecachefilereader_SOURCES = node-persistent-cache-reader.c
+nodecachefilereader_LDADD = libosm2pgsql.la
+
+check_PROGRAMS = tests/test-parse-xml2
+
+tests_test_parse_xml2_SOURCES = tests/test-parse-xml2.cpp 
+tests_test_parse_xml2_LDADD = libosm2pgsql.la
+
+TESTS = $(check_PROGRAMS) tests/regression-test.sh
+TEST_EXTENSIONS = .sh
+SH_LOG_COMPILER = sh
 
 if READER_PBF
-osm2pgsql_SOURCES += parse-pbf.c parse-pbf.h fileformat.pb-c.c fileformat.pb-c.h osmformat.pb-c.c osmformat.pb-c.h
+osm2pgsql_SOURCES += parse-pbf.h fileformat.pb-c.h osmformat.pb-c.h
+libosm2pgsql_la_SOURCES += parse-pbf.c fileformat.pb-c.c osmformat.pb-c.c
 
 fileformat.pb-c.c: protobuf/fileformat.proto
 	 $(AM_V_GEN) $(PROTOC_C) --proto_path=protobuf --c_out=. $<
@@ -39,7 +102,10 @@ osm2pgsqldir = $(datadir)/osm2pgsql
 AM_CFLAGS = @PTHREAD_CFLAGS@ @LFS_CFLAGS@ @POSTGRESQL_CFLAGS@ @XML2_CFLAGS@ @BZIP2_CFLAGS@ @GEOS_CFLAGS@ @PROJ_CFLAGS@ @PROTOBUF_C_CFLAGS@ @ZLIB_CFLAGS@ -DOSM2PGSQL_DATADIR='"$(osm2pgsqldir)"' -DVERSION='"@PACKAGE_VERSION@"' @LUA_INCLUDE@
 AM_CPPFLAGS = @PTHREAD_CFLAGS@ @POSTGRESQL_CFLAGS@ @XML2_CFLAGS@ @BZIP2_CFLAGS@ @GEOS_CFLAGS@ @PROJ_CFLAGS@ -DOSM2PGSQL_DATADIR='"$(osm2pgsqldir)"' -Igeos-fallback @LUA_INCLUDE@
 
-AM_LDFLAGS = @PTHREAD_CFLAGS@ @ZLIB_LDFLAGS@ @ZLIB_LIBS@ @POSTGRESQL_LDFLAGS@ @POSTGRESQL_LIBS@ @XML2_LDFLAGS@ @BZIP2_LDFLAGS@ @BZIP2_LIBS@ @GEOS_LDFLAGS@ @GEOS_LIBS@ @PROJ_LDFLAGS@ @PROJ_LIBS@ @PROTOBUF_C_LDFLAGS@ @PROTOBUF_C_LIBS@ -L/usr/lib/x86_64-linux-gnu @LUA_LIB@
+GLOBAL_LDFLAGS = @PTHREAD_CFLAGS@ @ZLIB_LDFLAGS@ @ZLIB_LIBS@ @POSTGRESQL_LDFLAGS@ @POSTGRESQL_LIBS@ @XML2_LDFLAGS@ @BZIP2_LDFLAGS@ @BZIP2_LIBS@ @GEOS_LDFLAGS@ @GEOS_LIBS@ @PROJ_LDFLAGS@ @PROJ_LIBS@ @PROTOBUF_C_LDFLAGS@ @PROTOBUF_C_LIBS@ -L/usr/lib/x86_64-linux-gnu @LUA_LIB@ -lstdc++
+osm2pgsql_LDADD += $(GLOBAL_LDFLAGS)
+tests_test_parse_xml2_LDADD += $(GLOBAL_LDFLAGS)
+nodecachefilereader_LDADD += $(GLOBAL_LDFLAGS)
 
 osm2pgsql_DATA = default.style 900913.sql
 
@@ -62,6 +128,4 @@ distclean-local:
 	@rm -f $(PACKAGE).spec
 	@rm -f config.nice
 
-test:
-	tests/regression-test.py -f tests/liechtenstein-2013-08-03.osm.pbf
-	tests/regression-test.py -f tests/liechtenstein-2013-08-03.osm.bz2
+test: check
