Add very simple escaping test.

--- a/Makefile.am
+++ b/Makefile.am
@@ -67,7 +67,8 @@ nodecachefilereader_LDADD = libosm2pgsql.la
 check_PROGRAMS = \
 	tests/test-parse-xml2 \
 	tests/test-middle-ram \
-	tests/test-middle-pgsql
+	tests/test-middle-pgsql \
+	tests/test-pgsql-escape
 
 tests_test_parse_xml2_SOURCES = tests/test-parse-xml2.cpp 
 tests_test_parse_xml2_LDADD = libosm2pgsql.la
@@ -75,6 +76,8 @@ tests_test_middle_ram_SOURCES = tests/test-middle-ram.cpp tests/middle-tests.cpp
 tests_test_middle_ram_LDADD = libosm2pgsql.la
 tests_test_middle_pgsql_SOURCES = tests/test-middle-pgsql.cpp tests/middle-tests.cpp
 tests_test_middle_pgsql_LDADD = libosm2pgsql.la
+tests_test_pgsql_escape_SOURCES = tests/test-pgsql-escape.cpp
+tests_test_pgsql_escape_LDADD = libosm2pgsql.la
 
 TESTS = $(check_PROGRAMS) tests/regression-test.sh
 TEST_EXTENSIONS = .sh
@@ -118,6 +121,7 @@ osm2pgsql_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_parse_xml2_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_middle_ram_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_middle_pgsql_LDADD += $(GLOBAL_LDFLAGS)
+tests_test_pgsql_escape_LDADD += $(GLOBAL_LDFLAGS)
 nodecachefilereader_LDADD += $(GLOBAL_LDFLAGS)
 
 osm2pgsql_DATA = default.style 900913.sql
