turn tagtransfrom into a proper object for use within output-pgsql as a member. add constness as much as possble to make clearer what changes and what doesnt within a given function

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ tests/.dirstamp
 tests/test-parse-xml2
 tests/test-middle-ram
 tests/test-middle-pgsql
+tests/test-pgsql-escape
 tests/*.log
 tests/*.trs
 
